Updated application name and icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style="height:100%">
   <head>
     <meta charset="utf-8">
-    <title>Camicri Cube</title>
+    <title>CubeGet</title>
   </head>
   <body style="min-height:100%;margin:0px;">
     <div id="app"></div>
